--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "kano-hardware",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "kano-kits.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "serialport": "^6.2.0",
+    "uuid": "^3.2.1"
+  }
 }
