--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "serialport": "^6.2.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "ws": "^5.2.0"
   }
 }
